--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TopDownMap.TopDownMap
 EditorStartupMap=/Game/Maps/TopDownMap.TopDownMap
-GlobalDefaultGameMode="/Script/TDS.TDSGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/Game/BP_TDSGameMode.BP_TDSGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
