--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,6 +20,7 @@ r.AllowStaticLighting=False
 r.DefaultFeature.Bloom=False
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.MotionBlur=False
+r.AntiAliasingMethod=4
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
